--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         </div>
                         <div class="bg-secondary p-4">
                             <h5>LUTHFI KAFANIYAL KAFI</h5>
-                            <p class="m-0">Web Designer</p>
+                            <p class="m-0">Ketua Kelas</p>
                         </div>
                     </div>
                 </div>
