--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" style="min-height: 300px;">
-                    <img class="position-relative w-100" src="https://i.ibb.co/KVzFcnp/image.jpg" style="min-height: 300px; object-fit: cover;">
+                    <img class="position-relative w-100" src="img/Kelas.jpg" style="min-height: 300px; object-fit: cover;">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Selamat Datang!</h5>
